ackinacki readme changes